2007-08-23 Mathieu Blondel <mblondel@cvs.gnome.org>

   	 * pt_BR.po: updated. Thanks to Alexandre Cavedon 
	 <alexandre.cavedon@gmail.com>.

2006-08-21  Mathieu Blondel  <mblondel@cvs.gnome.org>

    	* fr.po: Updated.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

   	 * pt_BR.po: updated. Thanks to Alexandre Cavedon 
	 <alexandre.cavedon@gmail.com>.

2007-07-30 Mathieu Blondel <mblondel@cvs.gnome.org>

   	 * ja.po: by Takuto MATSUU <matsuu@gmail.com>

2007-03-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    	* it.po: by Emilio Anzon <pan@linux.it>

2006-11-17  Mathieu Blondel  <mblondel@cvs.gnome.org>

    	* POTFILES.in: Updated with new translatable files.
    	* fr.po: Updated french translation.

2006-03-12  Raphael Higino  <raphaelh@cvs.gnome.org>

	* pt_BR.po: Added Brazilian Portuguese translation.

2006-03-11  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* br.po: Added Breton translation.

2006-03-11  Mathieu Blondel  <mblondel@cvs.gnome.org>

	* Makefile: file removed
	* README: updated for intltool-update

2006-03-10  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Added German translation.
	* ChangeLog: Rename Changelog to ChangeLog to match GNOME standards
	* POTFILES.in: Added for a working intltool-update
	* Makefile: Please remove this file
	* Changelog: Please remove this file

2006-03-09 Daniel Nylander <po@danielnylander.se>

	* sv.po: Swedish translation added

2006-03-09 Mathieu Blondel <mblondel@cvs.gnome.org>

    	* fr.po: first translation