@@ -1,7 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
-fantasdic.desktop
 data/fantasdic/glade/add_dictionary_dialog.glade
 data/fantasdic/glade/main_app.glade
 data/fantasdic/glade/preferences_dialog.glade
@@ -9,6 +8,10 @@ data/fantasdic/glade/server_infos_dialog.glade
 data/fantasdic/ui/menus.xml
 data/fantasdic/ui/popups.xml
 data/fantasdic/ui/toolbar.xml
+fantasdic.desktop
+lib/fantasdic/command_line.rb
+lib/fantasdic/preferences.rb
+lib/fantasdic.rb
 lib/fantasdic/ui/about_dialog.rb
 lib/fantasdic/ui/add_dictionary_dialog.rb
 lib/fantasdic/ui/alert_dialog.rb
@@ -17,10 +20,7 @@ lib/fantasdic/ui/ipc.rb
 lib/fantasdic/ui/main_app.rb
 lib/fantasdic/ui/preferences_dialog.rb
 lib/fantasdic/ui/print.rb
+lib/fantasdic/ui.rb
 lib/fantasdic/ui/result_text_view.rb
 lib/fantasdic/ui/utils.rb
-lib/fantasdic/preferences.rb
-lib/fantasdic/ui.rb
 lib/fantasdic/utils.rb
-lib/fantasdic/command_line.rb
-lib/fantasdic.rb
