@@ -1,3 +1,8 @@
+2007-09-02 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+   	 * POTFILES.in: Fixed file order.
+	 * fr.po: Updated.
+
 2007-08-23 Mathieu Blondel <mblondel@cvs.gnome.org>
 
    	 * pt_BR.po: updated. Thanks to Alexandre Cavedon 
